--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0"
   },
+  "devDependencies": {
+    "react-scripts": "3.0.0"
+  },
+  "resolutions": {
+    "babel-jest": "24.7.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
